# tempo-reconciliation-sdk

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
analysis/: dump-memos.ts  memo-analytics.ipynb  scan-incremental.ts
docs-public/: API.md  CLI.md  EXAMPLES.md  GETTING-STARTED.md  MEMO-SPEC.md  README.md
examples/: 01-encode-decode.ts  02-watch-live.ts  03-reconcile.ts  04-explorer-api.ts  05-watch-websocket.ts  06-transfer-only.ts  07-partial-payments.ts  08-full-pipeline.ts  09-memo-formats.ts  10-webhook-export.ts  11-error-handling.ts  12-issuer-filtering.ts  13-memo-index.ts  14-viem-transfer.ts  15-custom-store.ts  reconcile-showcase.ts
rs/: Cargo.toml  Makefile  README.md
rs/cli/: Cargo.toml  README.md
rs/cli/src/: error.rs  main.rs
rs/cli/src/cmd/: memo.rs  mod.rs  run.rs  watch.rs
rs/cli/src/io/: events.rs  expected.rs  mod.rs
rs/cli/tests/: cli.rs
rs/nonces/: Cargo.toml
rs/nonces/src/: constants.rs  error.rs  lib.rs  pool.rs  rpc.rs  types.rs
rs/nonces/tests/: pool_errors.rs  pool_expiring.rs  pool_idempotency.rs  pool_lanes.rs  pool_reap.rs  pool_stats.rs
rs/tempo-reconcile/: CHANGELOG.md  Cargo.toml  README.md
rs/tempo-reconcile/examples/: showcase.rs
rs/tempo-reconcile/src/: error.rs  lib.rs  types.rs
rs/tempo-reconcile/src/explorer/: mod.rs
rs/tempo-reconcile/src/export/: csv.rs  json.rs  mod.rs  webhook.rs
rs/tempo-reconcile/src/memo/: constants.rs  decode.rs  encode.rs  issuer_tag.rs  mod.rs  ulid.rs
rs/tempo-reconcile/src/reconciler/: engine.rs  mod.rs  store.rs
rs/tempo-reconcile/src/watcher/: decode.rs  dedup.rs  mod.rs  rpc.rs  watch.rs  watch_ws.rs
rs/tempo-reconcile/tests/: error_display.rs  explorer.rs  export.rs  live_testnet.rs  memo_decode.rs  memo_encode.rs  memo_fuzz.rs  memo_proptest.rs  reconciler_basic.rs  reconciler_partial.rs  reconciler_report.rs  serde_roundtrip.rs  store.rs  stress.rs  vectors.rs  watcher.rs  watcher_dedup.rs  watcher_ws.rs  webhook.rs
rs/tempo-reconcile/tests/reconciler_helpers/: mod.rs
scripts/: check-docs-sync.sh  check-rust-docs-sync.sh
spec/: MEMO-SPEC.md  vectors.json
ts/: .prettierignore  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.examples.json  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts
ts/examples/: 02-watch-live.ts  05-watch-websocket.ts  09-memo-formats.ts  11-error-handling.ts  12-issuer-filtering.ts  e2e-integration.ts  reconcile-showcase.ts
ts/src/: index.ts  types.ts
ts/src/explorer/: client.ts
ts/src/export/: csv.ts  index.ts  json.ts  webhook.ts
ts/src/memo/: decode.ts  encode.ts  issuer-tag.ts
ts/src/reconciler/: index.ts  reconciler.ts  store.ts
ts/src/watcher/: abi.ts  dedup.ts  history.ts  index.ts  normalize.ts  watch-ws.ts  watch.ts
ts/test/explorer/: client.test.ts
ts/test/export/: csv.test.ts  json.test.ts  webhook.test.ts
ts/test/memo/: decode.test.ts  issuer-tag.test.ts  ulid.test.ts  vectors.test.ts
ts/test/reconciler/: reconciler.test.ts  store.test.ts
ts/test/watcher/: dedup.test.ts  history.test.ts  live-testnet.test.ts  watch-ws.test.ts
